# the-hive

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TEST_PLAN.md  install.sh  justfile
.claude/commands/: tt-create.md  tt-run.md
.github/workflows/: ci.yml  release.yml
crates/app-daemon/: Cargo.toml
crates/app-daemon/src/: dev.rs  exec.rs  main.rs  process.rs
crates/hive-acceptance/: Cargo.toml
crates/hive-acceptance/src/: lib.rs
crates/hive-acceptance/tests/: 01_task_lifecycle.rs  02_task_claiming.rs  03_task_dependencies.rs  04_task_splitting.rs  05_message_board.rs  06_push_messages.rs  07_agent_registry.rs  08_multi_agent.rs  09_error_cases.rs  10_edge_cases.rs  11_dispatch_and_live_push.rs
crates/hive-agent/: Cargo.toml
crates/hive-agent/src/: agent.rs  client.rs  executor.rs  main.rs  polling.rs  session.rs  status.rs
crates/hive-agent/src/mcp/: mod.rs  rpc.rs  server.rs
crates/hive-agent/src/mcp/tools/: agents.rs  app_dev.rs  app_exec.rs  mod.rs  push.rs  tasks.rs  topics.rs
crates/hive-cli/: Cargo.toml  build.rs
crates/hive-cli/src/: commands.rs  init.rs  install.rs  main.rs  updater.rs  version.rs
crates/hive-cli/src/config/: io.rs  mod.rs  validate.rs
crates/hive-cli/src/docker/: containers.rs  lifecycle.rs  mod.rs  network.rs
crates/hive-cli/src/templates/: Dockerfile.agent  Dockerfile.app  Dockerfile.server
crates/hive-cli/src/tui/: agents_screen.rs  app.rs  dashboard.rs  events.rs  message_board.rs  mod.rs  poller.rs  settings_screen.rs  state.rs  tasks_screen.rs  util.rs
crates/hive-cli/src/tui/config/: mod.rs  state.rs  wizard.rs
crates/hive-cli/src/tui/config/screens/: agents.rs  app.rs  auth.rs  exec.rs  logging.rs  mod.rs  review.rs  server.rs
crates/hive-core/: .gitignore  Cargo.toml
crates/hive-core/src/: error.rs  lib.rs  types.rs
crates/hive-server/: Cargo.toml
crates/hive-server/src/: agent_registry.rs  communication.rs  db.rs  lib.rs  main.rs  message_board.rs  state.rs  tasks.rs  ws.rs
crates/hive-server/src/handlers/: agents.rs  message_board.rs  mod.rs  push.rs  tasks.rs
crates/hive-server/src/migrations/: 001_tasks.sql  002_message_board.sql  003_communication.sql  004_indexes.sql  005_topic_read_state.sql  006_topic_last_updated_by.sql
crates/hive-server/tests/: api.rs
docker/: Dockerfile.app-container  Dockerfile.hive-agent  Dockerfile.hive-server  docker-compose.yml
docs/: manual-test-app-daemon.md
docs/architecture/: agent-communication-v2.md  agent-communication.md
spec/: 00-overview.md  01-architecture.md  02-hive-cli.md  03-hive-server.md  04-hive-agent.md  05-docker.md  06-configuration.md  07-glossary.md  README.md  index.md
