[package]
name = "app-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["The Hive Team"]
rust-version = "1.93"

[[bin]]
name = "app-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
hive-core = { version = "0.1.0", path = "../hive-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.5"
