[package]
name = "hive-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["The Hive Team"]
rust-version = "1.93"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
